--- a/src/com.doriankarter.zoomctl.sdPlugin/external.html
+++ b/src/com.doriankarter.zoomctl.sdPlugin/external.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>com.elgato.template.externalWindow</title>
+		<title>com.doriankarter.zoomctl.externalWindow</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="libs/css/sdpi.css" />
 		<style>
